--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+<!DOCTYPE html>
 
 <html>
     <head>
@@ -6,22 +7,22 @@
             html {height: 100%;}
             body {
                 background: #0D343A;
-                background: -webkit-gradient(linear, 0%, 0%, 0%, 100%, from(rgba(13,52,58,1)), to(#000));
+                background: -webkit-gradient(linear, 0%, 0%, 0%, 100%, from(rgba(193,35,25,56)), to(#000));
                 
-                background: -moz-linear-gradient(top, rgba(13, 52, 58, 1) 0%, rgba(0,0,0,1) 100%);
+                background: -moz-linear-gradient(top, rgba(193, 35, 25, 56) 0%, rgba(0,0,0,1) 100%);
                 overflow: hidden;
             }
 
             .drop{
-                background: -webkit-gradent(linear, 0%, 0%, 0%, 100%, from(rgba(13, 52, 58, 1)), 
+                background: -webkit-gradient(linear, 0%, 0%, 0%, 100%, from(rgba(13, 52, 58, 1)), 
                     to(rgba(255,255,255,0.6)));
-                background: -moz-linear-gradient(top, rgba(13, 52, 58, 1) 0%, rgba(255,255,255,0.6) 100%);
+                background: -moz-linear-gradient(top, rgba(193, 35, 25, 56) 0%, rgba(255,255,255,0.6) 100%);
                 width: 1px;
                 height: 89px;
                 position: absolute;
                 bottom: 200px;
-                -webkit-animation: fall.63s linear infinite;
-                -moz-animation: fall .63s linear infinite;
+                -webkit-animation: fall 1s linear infinite;
+                -moz-animation: fall 1s linear infinite;
             }
 
             @-webkit-keyframes fall{
@@ -39,9 +40,45 @@
                 }
 
             function createRain(){
-                            for(i = 1; i< nbDrop, i++){
-                                        }}
+                            for(dropIndex = 1; dropIndex< nbDrop; dropIndex++){
+                                            var dropLeft = randRange(0, 1600);
+                                            var dropTop = randRange(-1000, 1400);
+
+                                            $('.rain').append('<div class="drop" id="drop' + dropIndex +  '"></div>');
+
+                                            $('#drop' + dropIndex).css('left', dropLeft);
+                                            $('#drop' + dropIndex).css('top', dropTop);
+                                        }
+                        }
         </script>
     </head>
-    <body></body>
+    <body onload='createRain();'>
+        <section class='rain'></section>
+    </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
